cluster/apps/networking/traefik/internal/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-internal
  labels:
    gateway.home-operations.io/type: internal
spec:
  controllerName: traefik.io/gateway-controller
