cluster/apps/networking/traefik/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: networking
  labels:
    gateway.home-operations.io/type: internal
  annotations:
    gatus.io/endpoint: |
      group: internal
      alerts:
        - type: pushover
        - type: ntfy
spec:
  gatewayClassName: traefik-internal
  addresses:
    - type: IPAddress
      value: "10.0.10.30"
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: "wildcard-internal-${SECRET_DOMAIN/./-}-tls"
