cluster/apps/networking/traefik/internal/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918-ips@kubernetescrd"
    gatus.io/enabled: "true"
    gatus.io/endpoint: |
      path: /dashboard/
spec:
  ingressClassName: "traefik-external"
  tls:
    - hosts:
        - &host "traefik.home.${SECRET_DOMAIN}"
      secretName: "wildcard-internal-${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-external
                port:
                  number: 8080
